--- a/class_projects/Koala_Site_2020/mystyle.css
+++ b/class_projects/Koala_Site_2020/mystyle.css
@@ -1,7 +1,3 @@
-body{
-    background-color: lightblue;
-}
-
 h1{
     color: navy;
     margin-left: 20px;
@@ -12,6 +8,22 @@ p{
     color:darkorchid;
     font-family:'Franklin Gothic Medium', 'Arial', Arial, sans-serif;
     text-align: center;
+}
+
+.left{
+    text-align: left;
+}
+
+.right{
+    text-align: right;
+}
+
+.end{
+    text-align: end;
+}
+
+.front{
+    text-align:start;
 }
 
 ul{
@@ -29,10 +41,6 @@ h1{
 h1, h3, h4 {
     text-align: center;
     text-transform: uppercase;
-}
-
-footer p {
-    font-family: 'Times New Roman', Times, serif;
 }
 
 strong.bold{
@@ -101,10 +109,14 @@ li.menu:active{
 }
 
 img, h1{
-    box-shadow: 10px 10px blanchedalmond;
+    box-shadow: 10px 10px black;
     border: 8px solid blue;
     padding: 5px;
     margin: 20px;
+}
+
+img.border{
+    border: 4px solid blue;
 }
 
 img.floatLeft{
