--- a/class_projects/Koala_Site_2020/mystyle.css
+++ b/class_projects/Koala_Site_2020/mystyle.css
@@ -103,9 +103,13 @@ li a:hover{
     color: white;
 }
 
-li.menu:active{
-    color:black;
-    padding: 50px;
+li.active{
+    color: black;
+    display: block;
+    padding: 8px 16px;
+    text-decoration: none;
+    float:none;
+    border-bottom: 3px solid blue;
 }
 
 img, h1{
